# scie-pants

./: .gitignore  .pants.bootstrap  BUILD  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  get-pants.sh  pants.toml  rust-toolchain
.circleci/: config.yml
.github/: dependabot.yml  runs-on.yml
.github/workflows/: audit-cargo.yml  audit-zizmor.yml  ci.yml  release.yml
package/: .gitignore  Cargo.toml  README.md  build.rs  installer.py  lift.linux_x86_64.json  lock.json  pbt.lift.json  pbt.toml  scie-pants.lift.json  scie-pants.toml
package/pbt/: .gitignore  lift.json
package/pex/: .gitignore  lift.json
package/scie-pants/: .gitignore  lift.json  lift.linux-x86_64.json
package/src/: main.rs  scie_pants.rs  test.rs  tools_pex.rs
package/src/utils/: build.rs  exe.rs  fs.rs  logging.rs  mod.rs  os.rs
src/: build_root.rs  config.rs  main.rs  pants_bootstrap.rs
tools/: .gitignore  BUILD  README.md  lift.json  lock.json  pyproject.toml  requirements.txt  tox.ini
tools/src/: lock.json  pyproject.toml
tools/src/scie_pants/: BUILD  __init__.py  bootstrap_tools.py  configure_pants.py  install_pants.py  log.py  pants_python_versions.json  pants_release_tags.json  pants_version.py  ptex.py  record_scie_pants_info.py  update_scie_pants.py
tools/src/scie_pants.dist-info/: BUILD  entry_points.txt
tools/test_support/testing/: BUILD  __init__.py
tools/tests/: BUILD  conftest.py  test_bootstrap_tools.py  test_pants_bootstrap.py
