[workspace]
members = [
    "package",
]

[package]
name = "scie-pants"
description = "Protects your Pants from the elements."
version = "0.12.5"
edition = "2021"
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
publish = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0.0"
log = "0.4.28"
tempfile = "3.23.0"

[dependencies]
anyhow = { workspace = true}
env_logger = { version = "0.11.8", default-features = false }
log = { workspace = true }
logging_timer = "1.1.1"
nix = { version = "0.30.1", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = { workspace = true }
toml = "0.9.8"
uuid = { version = "1.18.1", features = ["v4"], default-features = false }

[target.'cfg(unix)'.dependencies]
shell-quote = "0.3.1"
