[workspace]
members = [
    "package",
]

[package]
name = "scie-pants"
description = "Protects your Pants from the elements."
version = "0.13.0"
edition = "2024"
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
publish = false

[profile.release]
opt-level = "s"
strip = "symbols"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
anyhow = "1.0"
dirs = "6.0.0"
log = "0.4.29"
tempfile = "3.27.0"

[dependencies]
anyhow = { workspace = true}
env_logger = { version = "0.11.8", default-features = false }
log = { workspace = true }
logging_timer = "1.1.1"
nix = { version = "0.31.2", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
tempfile = { workspace = true }
toml = "1.0.6"
uuid = { version = "1.18.1", features = ["v4"], default-features = false }

[target.'cfg(unix)'.dependencies]
shell-quote = "0.7.2"
