[package]
name = "package"
version = "0.2.0"
description = "Packages the scie-pants binary."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
dirs = "5.0"
fd-lock = "4.0"
lazy_static = "1.4"
log = { workspace = true }
pretty_env_logger = "0.5"
regex = "1.10"
serde_json = "1.0.114"
sha2 = "0.10"
tempfile = { workspace = true }
termcolor = "1.4"
ureq = "2.9"
walkdir = "2.4"
