[package]
name = "package"
version = "0.2.0"
description = "Packages the scie-pants binary."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.51", features = ["derive"] }
dirs = { workspace = true }
fd-lock = "4.0.4"
lazy_static = "1.5.0"
log = { workspace = true }
pretty_env_logger = "0.5.0"
regex = "1.12.2"
serde_json = "1.0.145"
sha2 = "0.10.9"
tempfile = { workspace = true }
termcolor = "1.4.1"
ureq = "3.1.4"
walkdir = "2.5.0"
