[package]
name = "package"
version = "0.2.0"
description = "Packages the scie-pants binary."
authors = [
    "John Sirois <john.sirois@gmail.com>",
]
edition = "2024"
publish = false

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.6.1", features = ["derive"] }
dirs = { workspace = true }
fd-lock = "4.0.4"
lazy_static = "1.5.0"
log = { workspace = true }
pretty_env_logger = "0.5.0"
regex = "1.12.3"
serde_json = "1.0.149"
sha2 = "0.11.0"
tempfile = { workspace = true }
termcolor = "1.4.1"
ureq = "3.3.0"
walkdir = "2.5.0"
